fix: tab button aligment on small devices

--- a/assets/_sass/includes/elements/_buttons.scss
+++ b/assets/_sass/includes/elements/_buttons.scss
@@ -74,6 +74,10 @@
 
 			.button {
 				margin-right: 0;
+
+				& + .button {
+					margin-left: 0 !important;
+				}
 			}
 		}
 	}
